# conversao_base_numerica

./: Conversor Numérico Multibase com Interface Gráfica.docx  Conversor.py  LICENSE  README.md
Conversor/: README.md  pyproject.toml  requirements.txt
Conversor/scripts/: build_exe.sh
Conversor/src/: Conversor.py  __main__.py
Conversor/src/utils/: __init__.py
docs/: Conversor Numérico Multibase com Interface Gráfica_Novo.docx
